<resources>
    <string name="app_name">uGet</string>
    <string name="app_offline">Offline</string>
    <string name="menu_category">Category …</string>
    <string name="menu_download">Download …</string>
    <string name="menu_resume_all">Resume all</string>
    <string name="menu_pause_all">Pause all</string>
    <string name="menu_settings">Settings …</string>
    <string name="menu_save_all">Save all data</string>
    <string name="menu_offline_mode">Offline Mode</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_download_startup_mode">Startup mode …</string>
    <string name="menu_download_start_auto">Auto start</string>
    <string name="menu_download_start_manually">Manually start</string>
    <string name="menu_action_button_batch_sequence">URL Sequence batch</string>
    <string name="menu_action_button_open_category">Open category…</string>
    <string name="menu_action_button_save_category">Save category as…</string>
    <string name="menu_category_new">New…</string>
    <string name="menu_category_delete">Delete</string>
    <string name="menu_category_preferences">Preferences…</string>
    <string name="menu_category_move_up">Move Up</string>
    <string name="menu_category_move_down">Move Down</string>
    <string name="menu_download_open">Open…</string>
    <string name="menu_download_delete">Delete…</string>
    <string name="menu_download_delete_recycle">Delete (Recycle)</string>
    <string name="menu_download_delete_data">Delete Entry</string>
    <string name="menu_download_delete_file">Delete Entry and File</string>
    <string name="menu_download_force_start">Force Start</string>
    <string name="menu_download_runnable">Runnable</string>
    <string name="menu_download_pause">Pause</string>
    <string name="menu_download_move">Move…</string>
    <string name="menu_download_priority">Priority…</string>
    <string name="menu_download_priority_high">High</string>
    <string name="menu_download_priority_normal">Normal</string>
    <string name="menu_download_priority_low">Low</string>
    <string name="menu_context">Context Menu</string>
    <string name="menu_context_new_download">New Download…</string>
    <string name="menu_context_new_category">New Category…</string>
    <string name="menu_select_folder">Select Folder…</string>
    <string name="dialog_confirm_exit_title">Really Quit?</string>
    <string name="dialog_confirm_exit">Are you sure you want to quit?</string>
    <string name="dialog_confirm_delete_title">Really delete files?</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete files?</string>
    <string name="dialog_confirm_delete_category_title">Really delete category?</string>
    <string name="dialog_confirm_delete_category">Are you sure you want to delete category?</string>
    <string name="notification_error_title">Error Occurred</string>
    <string name="notification_error_content">Error occurred when downloading.</string>
    <string name="notification_starting_title">Download Starting</string>
    <string name="notification_starting_content">Starting download queue.</string>
    <string name="notification_completed_title">Download Completed</string>
    <string name="notification_completed_content">All queuing downloads have been completed.</string>
    <string name="preference_ui">User interface</string>
    <string name="preference_sort">Download sorting…</string>
    <string name="preference_sort_summary">If user choose "All Category" or "All Status", sorting downloads by…</string>
    <string name="preference_sort_entrie_default">0</string>
    <string-array name="preference_sort_entrie_array">
        <item>Unsort</item>
        <item>Sort by name</item>
        <item>Sort by added time</item>
    </string-array>
    <string-array name="preference_sort_entrie_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="preference_ui_confirm_delete">Confirm delete</string>
    <string name="preference_ui_confirm_delete_summary">Confirm when deleting files</string>
    <string name="preference_ui_confirm_exit">Confirm exit</string>
    <string name="preference_ui_confirm_exit_summary">Show confirmation dialog on exit</string>
    <string name="preference_ui_exit_on_back">Exit on back pressed</string>
    <string name="preference_ui_exit_on_back_summary">Exiting uGet when user press back button.</string>
    <string name="preference_ui_notification_starting">Download starting notification</string>
    <string name="preference_ui_notification_starting_summary">Show notification when download starting.</string>
    <string name="preference_ui_notification_sound">Sound when download is finished</string>
    <string name="preference_ui_notification_sound_summary">Sound when download is finished or error occurred.</string>
    <string name="preference_ui_notification_vibrate">Vibrate when download is finished</string>
    <string name="preference_ui_notification_vibrate_summary">Vibrate when download is finished or error occurred.</string>
    <string name="preference_ui_no_wifi_go_offline">Go offline if no WiFi connection</string>
    <string name="preference_ui_no_wifi_go_offline_summary">Program will enable/disable offline mode if WiFi has disconnected/connected.</string>
    <string name="preference_ui_skip_existing_uri">Skip existing URI</string>
    <string name="preference_clipboard">Clipboard</string>
    <string name="preference_clipboard_monitor">Clipboard monitor</string>
    <string name="preference_clipboard_monitor_summary">Enable/Disable clipboard monitor</string>
    <string name="preference_clipboard_media_website">Monitor URL of media website</string>
    <string name="preference_clipboard_media_website_summary">Monitor URL of media website if uGet support this site.</string>
    <string name="preference_clipboard_type">File types</string>
    <string name="preference_clipboard_type_summary">Monitor clipboard for specified file types (support Regular Expression)</string>
    <string name="preference_clipboard_type_error_title">Clipboard File types</string>
    <string name="preference_clipboard_type_error_message">Syntax error in regular expression</string>
    <string name="preference_clipboard_index">Default category index</string>
    <string name="preference_clipboard_index_summary">Adding URL to Nth category if no category matched</string>
    <string name="preference_clipboard_clear_at_exit">Clear clipboard at exit</string>
    <string name="preference_clipboard_clear_at_exit_summary">Clear clipboard data at exit</string>
    <string name="preference_clipboard_clear_after_accepting">Clear clipboard after accepting URL</string>
    <string name="preference_clipboard_clear_after_accepting_summary">Clear clipboard data after uGet accept a downloadable URL.</string>
    <string name="preference_speed">Speed limit</string>
    <string name="preference_speed_download">Download speed limit</string>
    <string name="preference_speed_download_summary">Setup download speed limit (KiB/s)</string>
    <string name="preference_speed_upload">Upload speed limit</string>
    <string name="preference_speed_upload_summary">Setup upload speed limit (KiB/s)</string>
    <string name="preference_plugin_order">Plug-in matching order…</string>
    <string name="preference_plugin_order_summary">Select primary and secondary plug-in.</string>
    <string name="preference_plugin_order_entrie_default">0</string>
    <string-array name="preference_plugin_order_entrie_array">
        <item>curl</item>
        <item>aria2</item>
        <item>curl + aria2</item>
        <item>aria2 + curl</item>
    </string-array>
    <string-array name="preference_plugin_order_entrie_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="preference_aria2">Aria2 plug-in options</string>
    <string name="preference_aria2_uri">URI</string>
    <string name="preference_aria2_uri_summary">Setup URI for aria2 JSON-RPC</string>
    <string name="preference_aria2_token">RPC authorization secret token</string>
    <string name="preference_aria2_token_summary">Don\'t change If you don\'t know what is this. Use with aria2 argument --rpc-secret</string>
    <string name="preference_aria2_local">Run aria2 in this device</string>
    <string name="preference_aria2_local_summary">Launch aria2 server in this device. You must install aria2c by yourself.</string>
    <string name="preference_aria2_speed_download">Download speed limit for aria2</string>
    <string name="preference_aria2_speed_download_summary">Setup download speed limit (KiB/s), it only affect aria2 plug-in.</string>
    <string name="preference_aria2_speed_upload">Upload speed limit for aria2</string>
    <string name="preference_aria2_speed_upload_summary">Setup upload speed limit (KiB/s), it only affect aria2 plug-in.</string>
    <string name="preference_aria2_launch">Launch aria2</string>
    <string name="preference_aria2_launch_summary">Launch aria2 on startup</string>
    <string name="preference_aria2_shutdown">Shutdown aria2</string>
    <string name="preference_aria2_shutdown_summary">Shutdown aria2 on exit</string>
    <string name="preference_aria2_path">Path</string>
    <string name="preference_aria2_path_summary">Full path of aria2 program</string>
    <string name="preference_aria2_args">Arguments</string>
    <string name="preference_aria2_args_summary">Passing arguments to aria2</string>
    <string name="preference_media">Media website options</string>
    <string name="preference_media_match_mode">Media matching mode</string>
    <string name="preference_media_match_mode_summary">Setup media matching mode</string>
    <string name="preference_media_match_mode_entrie_default">3</string>
    <string name="preference_media_quality">Media Quality</string>
    <string name="preference_media_quality_summary">Setup media matching condition - Quality</string>
    <string name="preference_media_quality_entrie_default">1</string>
    <string name="preference_media_type">Media Type</string>
    <string name="preference_media_type_summary">Setup media matching condition - Type</string>
    <string name="preference_media_type_entrie_default">0</string>
    <string name="preference_other">Other</string>
    <string name="preference_autosave_interval">Autosave Interval</string>
    <string name="preference_autosave_interval_summary">Save all data every N minutes.</string>
    <string name="dnode_uri">URI</string>
    <string name="dnode_mirrors">Mirrors</string>
    <string name="dnode_file">File</string>
    <string name="dnode_folder">Folder</string>
    <string name="dnode_user">User</string>
    <string name="dnode_password">Password</string>
    <string name="dnode_connections">Max connections</string>
    <string name="dnode_referrer">Referrer</string>
    <string-array name="dnode_proxy_type">
        <item>Don\'t use</item>
        <item>Default</item>
        <item>HTTP</item>
        <item>SOCKS v4</item>
        <item>SOCKS v5</item>
    </string-array>
    <string name="dnode_proxy_host">Host</string>
    <string name="dnode_proxy_port">Port</string>
    <string name="dnode_proxy_user">User</string>
    <string name="dnode_proxy_password">Password</string>
    <string name="cnode_name">Name : </string>
    <string name="cnode_active_limit">Active downloads</string>
    <string name="cnode_finished_limit">Capacity of Finished</string>
    <string name="cnode_recycled_limit">Capacity of Recycled</string>
    <string name="cnode_hosts">Matched hosts : </string>
    <string name="cnode_schemes">Matched schemes : </string>
    <string name="cnode_file_types">Matched types : </string>
</resources>