<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<ListPreference
        android:key="preference_media_match_mode"
        android:title="@string/preference_media_match_mode"
        android:summary="@string/preference_media_match_mode_summary"
        android:entries="@array/preference_media_match_mode_entrie_array"
        android:entryValues="@array/preference_media_match_mode_entrie_values"
        android:defaultValue="@string/preference_media_match_mode_entrie_default"
        android:dialogTitle="@string/preference_media_match_mode_summary" />

    <ListPreference
        android:key="preference_media_quality"
        android:title="@string/preference_media_quality"
        android:summary="@string/preference_media_quality_summary"
        android:entries="@array/preference_media_quality_entrie_array"
        android:entryValues="@array/preference_media_quality_entrie_values"
        android:defaultValue="@string/preference_media_quality_entrie_default"
        android:dialogTitle="@string/preference_media_quality_summary" />

    <ListPreference
        android:key="preference_media_type"
        android:title="@string/preference_media_type"
        android:summary="@string/preference_media_type_summary"
        android:entries="@array/preference_media_type_entrie_array"
        android:entryValues="@array/preference_media_type_entrie_values"
        android:defaultValue="@string/preference_media_type_entrie_default"
        android:dialogTitle="@string/preference_media_type_summary" />

</PreferenceScreen>