<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_category"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@mipmap/ic_action_category"
        android:title="@string/menu_category"/>
    <item
        android:id="@+id/menu_download"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@mipmap/ic_action_download"
        android:title="@string/menu_download"/>
    <item
        android:id="@+id/menu_resume_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_resume_all"/>
    <item
        android:id="@+id/menu_pause_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_pause_all"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>
</menu>
