<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1" >
    <!-- 
    android:stretchColumns="1"
     -->

    <TableRow>

        <TextView
            android:id="@+id/dnode_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_uri"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <!-- 
        <Button
            android:id="@+id/dnode_uri_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_uri" />
         -->

        <EditText
            android:id="@+id/dnode_uri_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="textUri"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
 
    <TableRow>
        <TextView
            android:id="@+id/dnode_mirrors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_mirrors"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_mirrors_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/dnode_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_file"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_file_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/dnode_folder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_folder" />
        <!--style="?android:attr/buttonStyleSmall"
         -->

        <EditText
            android:id="@+id/dnode_folder_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_referrer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_referrer_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="text|textUri"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_user"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_user_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_password_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_connections"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/dnode_connections_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:ems="3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

	<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_retry_limit"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/dnode_retry_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:ems="3"
            android:textAppearance="?android:attr/textAppearanceMedium" />
	-->
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#333333" />

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dnode_proxy_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/dnode_proxy_type_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dnode_proxy_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_proxy_host"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_proxy_host_editor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:ems="8"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/dnode_proxy_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_proxy_port"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_proxy_port_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TableRow>
        <TextView
            android:id="@+id/dnode_proxy_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_user"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_proxy_user_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/dnode_proxy_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnode_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dnode_proxy_password_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="4"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

</TableLayout>
